oci/traefik/apps/hsts-middleware-default.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hsts-header
  namespace: default
spec:
  headers:
    stsIncludeSubdomains: true
    stsSeconds: 63072000
    stsPreload: true
